--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-source-filesystem": "^1.5.33",
     "gatsby-transformer-remark": "^1.7.40",
     "gatsby-transformer-sharp": "^1.6.23",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.2.6"
   },
   "keywords": [
     "gatsby"
